# correlator

./: CMakeLists.txt  LICENSE  README.md  build.sh
apps/: correlator.cpp
src/: correlation.cpp  correlation.h  correlation.hpp  correlation_gpu.cpp  correlation_gpu.hpp  gpu_helpers.hpp  mycomplex.hpp  utils.cpp  utils.hpp
tests/: correlation_benchmark.cpp  correlation_blas_test.cpp  correlation_test.cpp  utils_test.cpp
